--- a/.github/workflows/publish-to-gh-pages.yml
+++ b/.github/workflows/publish-to-gh-pages.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master   # Change if your default branch is different
+      - master
       
 permissions:
   contents: write # We generate static HTML, JS, CSS so we need write access to the repo
@@ -26,15 +26,15 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Create dist folder structure
+        run: |
+          mkdir dist
+          cp -r src/* dist/
+          cp -r public dist/public
+
       - name: Build Tailwind CSS
         run: npx tailwindcss -i ./src/styles/input.css -o ./dist/styles.css --minify
-
-      - name: Prepare dist folder
-        run: |
-          mkdir -p dist
-          cp ./src/index.html ./dist/
-          cp -r ./public ./dist/
-
+        
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
