--- a/.github/workflows/publish-to-gh-pages.yml
+++ b/.github/workflows/publish-to-gh-pages.yml
@@ -32,6 +32,7 @@ jobs:
           cp -r src/scripts dist/scripts
           cp -r public dist/public
           cp -r src/favicon.ico dist/favicon.ico
+          cp -r src/projects.html dist/projects.html
 
       - name: Build Tailwind CSS
         run: npx tailwindcss -i ./src/styles/input.css -o ./dist/styles.css --minify
